validator_derive_tests/tests/compile-fail/length/unknown_arg.stderr
error: Invalid attribute #[validate] on field `s`: unknown argument `eq` for validator `length` (it only has `min`, `max`, `equal`)
 --> $DIR/unknown_arg.rs:5:23
  |
5 |     #[validate(length(eq = 2))]
  |                       ^^
